# OpenMiniGym

./: README.md
robobutler/controllers/control_task2/: CMakeLists.txt
robobutler/controllers/control_task2/Param/: param_gait.yaml  param_robot.yaml
robobutler/controllers/control_task2/Param1/: param_gait.yaml
robobutler/controllers/control_task2/src/: butler.cpp  main.cpp
robobutler/controllers/tinystretch/: CMakeLists.txt  tinystretch
robobutler/controllers/tinystretch/Data/: 20kg.rar  file1.txt  file3.txt  file5.txt  plot.m  plot2leg.m
robobutler/controllers/tinystretch/Map/: Map.rar  draw_local_map_good_location_cube.prj  fake_map0.txt  fake_map2.txt  fake_map_gen_guass.m  foot_good_foot_found.m  foot_good_foot_found.prj  limit.m  move_local_map.prj  way_point.txt
robobutler/controllers/tinystretch/Map/codegen/lib/draw_local_map_good_location_cube/: bwlabel.cpp  codeInfo.mat  draw_local_map_good_location_cube.h  draw_local_map_good_location_cube_initialize.cpp  draw_local_map_good_location_cube_initialize.h  draw_local_map_good_location_cube_rtw.rsp  draw_local_map_good_location_cube_rtw_comp.rsp  draw_local_map_good_location_cube_terminate.cpp  draw_local_map_good_location_cube_types.h  gcGuiReport.mat  (+1 more)
robobutler/controllers/tinystretch/common_utils/: common.cpp  common.hpp
robobutler/controllers/tinystretch/gait_src/: self_right_qt.cpp  stand_qt.cpp
robobutler/controllers/tinystretch/include_vmc/: FootSwingTrajectory.h  base_struct.h  contact_detection.h  gait_math.h  locomotion_header.h  my_math.h  vmc.h  webot_vmc.h
robobutler/controllers/tinystretch/include_wb/: include.h  optimaize.h  wbInterface.h
robobutler/controllers/tinystretch/locomotion_src/: auto_mission.cpp  force_imp_controller.cpp  hardware_interface.cpp  locomotion_sfm.cpp  state_estimator.cpp  vmc_controller.cpp
robobutler/controllers/tinystretch/math_src/: FootSwingTrajectory.cpp  PositionVelocityEstimator.cpp  RT_math.cpp  common_math.cpp  ground_est_qt.cpp  kin_math.cpp  kin_math_pino.cpp  kin_math_rbdl.cpp  log_pinRefined.cpp  log_pinRefined.h  optimize_qt.cpp  robotmath.h  rtGetInf.cpp  rt_nonfinite.cpp  traj_math.cpp  zmp_math.cpp
robobutler/controllers/tinystretch/mpc/: RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  common_types.h  convexMPC_interface.h  cppTypes.h  mpc_locomotion.cpp  mpc_locomotion.h
robobutler/controllers/tinystretch/rbdl_src/model/: DynModel.cpp  DynModel.hpp  KinModel.cpp  RobotDefinition.hpp  RobotModel.cpp  RobotModel.hpp
robobutler/controllers/tinystretch/rbdl_src/rbdl/: Body.h  Constraints.cc  Constraints.h  Dynamics.cc  Dynamics.h  Joint.cc  Joint.h  Kinematics.cc  Kinematics.h  Logging.cc  Logging.h  Model.cc  Model.h  rbdl.h  rbdl_config.h  rbdl_math.h  rbdl_mathutils.cc  rbdl_mathutils.h  rbdl_utils.cc  rbdl_utils.h  rbdl_version.cc  urdfreader.cc  urdfreader.h
robobutler/controllers/tinystretch/rbdl_src/urdf/: TinyArm5.urdf  link.h  pose.h
robobutler/controllers/tinystretch/share_mem/: memory_share.cpp  spi_node.h  sys_time.h  sys_timer.cpp
robobutler/controllers/tinystretch/src_sim/: memory_share_sim.cpp  tinystretch.cpp  wbInterface.cpp  wbInterface.h
robograsp/src/robot_sim-master/experiment/: CMakeLists.txt
robograsp/src/robot_sim-master/experiment/grasp/inc/: control.h
robograsp/src/robot_sim-master/experiment/grasp/launch/: geo_run.launch  gpd_run.launch
robohome/webots/controllers/tinyscretch/: CMakeLists.txt  tinyscretch
robohome/webots/controllers/tinyscretch/Data/: 66kg.rar  file2.txt  file4.txt
robohome/webots/controllers/tinyscretch/Map/: cube_cog.txt  draw_local_map_good_location_cube.m  fake_map1.txt  fake_map_anal.m  fake_map_gen.m  find_pos_on_map_local.m  find_pos_on_map_n.m  foot_sel_on_map.m  foot_sel_on_map.prj  g_map_t_15cm.txt  limit_i.m  map_location.m  map_location.prj  move_local_map.m  move_local_map_cplus.m  move_local_map_cplus.prj  vision_location_1.m
robohome/webots/controllers/tinyscretch/gait_src/: stand_qt.cpp
robohome/webots/controllers/tinyscretch/include_vmc/: Interpolation.h  PositionVelocityEstimator.h  base_struct.h  eso.h  gait_math.h  ground_att_est_n.h  leg_planner.h  locomotion_header.h  rt_defines.h
robohome/webots/controllers/tinyscretch/include_wb/: ai_touch.h  include.h  robotInfo.h  wbInterface.h
robohome/webots/controllers/tinyscretch/locomotion_src/: force_imp_controller.cpp  hardware_interface.cpp  locomotion_sfm.cpp  state_estimator.cpp  tinystretch.cpp  vmc_controller.cpp
robohome/webots/controllers/tinyscretch/math_src/: RT_math.cpp  common_math.cpp  eso_qt.cpp  kin_math.cpp  kin_math_pino.cpp  rtGetNaN.cpp  traj_math.cpp  vision_locomotion.cpp  zmp_math.cpp
robohome/webots/controllers/tinyscretch/model/: DynModel.cpp  KinModel.cpp  KinModel.hpp  RobotDefinition.hpp  RobotModel.cpp
robohome/webots/controllers/tinyscretch/mpc/: convexMPC_interface.cpp
robohome/webots/controllers/tinyscretch/qpOASES/: make.mk
robohome/webots/controllers/tinyscretch/source/: memory_share.cpp  optimize_qt.cpp  spi_node.h  wbInterface.cpp
roboimitate/DrSun_IK_solver/ttst/ik_7dof_fourier/: CMakeLists.txt  armdecode_L.h  armdecode_R.h  codeInfo.mat  ik_7dof_fourier.c  ik_7dof_fourier_initialize.h  ik_7dof_fourier_rtw.mk  ik_7dof_fourier_terminate.c  ik_7dof_fourier_terminate.h  ik_7dof_fourier_types.h  ik_fa.cpp  jiesuan.cpp  norm.c  norm.h  rtGetInf.c  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  t_r  test_l.cpp  test_l.sp  test_r.cpp
roboimitate/DrSun_IK_solver/ttst/ik_7dof_fourier/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  jiesuan
roboimitate/DrSun_IK_solver/ttst/ik_7dof_fourier/examples/: main.c  main.h
roboimitate/DrSun_IK_solver/ttst/ik_7dof_fourier/html/: ik_7dof_fourier_h.html  ik_7dof_fourier_initialize_h.html  ik_7dof_fourier_terminate_c.html  ik_7dof_fourier_terminate_h.html  ik_7dof_fourier_types_h.html  norm_c.html  rtGetInf_c.html  rtGetNaN_h.html  rt_defines_h.html
roboimitate/DrSun_IK_solver/ttst/ik_7dof_fourier/interface/: _coder_ik_7dof_fourier_api.h  _coder_ik_7dof_fourier_info.h  _coder_ik_7dof_fourier_mex.c
(+317 files in other folders)
